<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="modelo"
            type="com.atpdev.paltoscan.features.recognition.RecognitionFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.main.RecognitionMain">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/cardWeather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!-- Weather Widget (Sprint 2) -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgWeatherIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_start_app"
                    app:tint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/txtWeatherStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Cargando clima..."
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgWeatherIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtWeatherDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="Obteniendo datos de riesgo..."
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgWeatherIcon"
                    app:layout_constraintTop_toBottomOf="@id/txtWeatherStatus" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnDetectPatofoli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardWeather"
            app:lottie_fileName="principal.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_goneMarginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetectPatofoli"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_star_main"
            android:text="@string/btnDetectPatofoli"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_start_app"
            app:iconTint="@color/white"
            app:rippleColor="@color/colorRedBright"
            app:layout_constraintBottom_toTopOf="@+id/btnAbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAbout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_bar_info"
            android:backgroundTint="@color/colorBlueLight"
            android:text="@string/btnAbout"
            app:layout_constraintBottom_toTopOf="@+id/btn_user_manual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDetectPatofoli" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_user_manual"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/user_manual"
            app:icon="@drawable/ic_user_manual"
            app:layout_constraintBottom_toTopOf="@+id/btnExit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAbout"
            app:layout_constraintVertical_bias="0.5" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:icon="@drawable/ic_bar_exit"
            android:background="@drawable/btn_exit_main"
            app:backgroundTint="@null"
            android:text="@string/btnExit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_user_manual" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>